src/examples/nodejs-mongodb/mongo_pod.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: mongo
spec: 
  template: 
    metadata: 
      labels: 
        run: mongo
    spec: 
      containers: 
        - 
          image: mongo
          name: mongo
          ports: 
            - 
              containerPort: 27017
          volumeMounts: 
            - 
              mountPath: /data/db
              name: mongo-persistent-storage
      volumes: 
        - 
          hostPath: 
            path: /data/db
          name: mongo-persistent-storage
