src/examples/nodejs-mongodb/mongo_service.yml
---
apiVersion: v1
kind: Service
metadata: 
  labels: 
    run: mongo
  name: mongo
spec: 
  ports: 
    - 
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector: 
    run: mongo
